[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 22.6091
margin_top = 256.755
margin_right = 343.609
margin_bottom = 349.755
text = "press_me"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
margin_left = 461.314
margin_top = 141.382
margin_right = 713.314
margin_bottom = 207.382
text = "name"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name2" type="Label" parent="."]
margin_left = 462.136
margin_top = 93.7868
margin_right = 714.136
margin_bottom = 159.787
text = "name_2"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name3" type="Label" parent="."]
margin_left = 462.136
margin_top = 43.6397
margin_right = 714.136
margin_bottom = 109.64
text = "name_2"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="."]
margin_left = 703.154
margin_top = 146.78
margin_right = 925.154
margin_bottom = 207.78
text = "score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score2" type="Label" parent="."]
margin_left = 706.346
margin_top = 98.892
margin_right = 928.346
margin_bottom = 159.892
text = "score2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score3" type="Label" parent="."]
margin_left = 702.982
margin_top = 45.9928
margin_right = 924.982
margin_bottom = 106.993
text = "score2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_recent" type="Label" parent="."]
margin_left = 52.7557
margin_top = 120.103
margin_right = 348.756
margin_bottom = 200.103
text = "score_now"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_recent" type="Label" parent="."]
margin_left = 111.124
margin_top = 56.1231
margin_right = 285.124
margin_bottom = 119.123
text = "name _now"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save" type="Button" parent="."]
margin_left = 62.0
margin_top = 448.0
margin_right = 331.0
margin_bottom = 541.0
text = "save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 462.808
margin_top = 62.3569
margin_right = 525.808
margin_bottom = 101.357
text = "1"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 468.148
margin_top = 109.744
margin_right = 531.148
margin_bottom = 148.744
text = "2"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 468.148
margin_top = 153.126
margin_right = 531.148
margin_bottom = 192.126
text = "3"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="set_name" type="LineEdit" parent="."]
margin_left = 405.0
margin_top = 305.0
margin_right = 566.0
margin_bottom = 329.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 426.0
margin_top = 354.0
margin_right = 554.0
margin_bottom = 387.0
text = "set_name"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
